<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:scrollbars="vertical"
    android:fadingEdge="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/textPrimaryColor"
                android:text="Audio服务初始化"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp">
                <Button
                    android:id="@+id/init"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/init"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/button_background"/>

                <Button
                    android:id="@+id/getFeaturesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/getFeatures"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/button_background"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/isEarReturnSupportButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isKaraokeSupport"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/button_background"/>
                <Button
                    android:id="@+id/isAdvancedRecordSupportBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/isAdvancedRecordSupport"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/button_background"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="4dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/textPrimaryColor"
                android:text="耳返功能测试"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="2dp">
                <Button
                    android:id="@+id/initKaraoke"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/initKaraoke"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="84dp"
                    android:background="@drawable/button_background"/>
                <Button
                    android:id="@+id/isKaraokeSupportButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:maxWidth="84dp"
                    android:text="@string/isKaraokeSupport"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/button_background"/>
                <Button
                    android:id="@+id/enableKaraokeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enableKaraoke"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:background="@drawable/button_background"/>
                <Button
                    android:id="@+id/disableKaraokeButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/closeKaraoke"
                    android:maxWidth="90dp"
                    android:background="@drawable/button_background"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/setDefaultReverberationMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultReverberation"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:background="@drawable/button_background"/>

                <Button
                    android:id="@+id/setKtvReverberationMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ktvReverberation"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="84dp"
                    android:background="@drawable/button_background"/>

                <Button
                    android:id="@+id/setTheaterReverberationMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theaterReverberation"
                    android:maxWidth="90dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/button_background"/>

                <Button
                    android:id="@+id/setConcertReverberationMode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/concertReverberation"
                    android:maxWidth="90dp"
                    android:background="@drawable/button_background"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="人声音量设置："
                    android:layout_marginEnd="2dp"/>
                <EditText
                    android:id="@+id/setKaraokeAudioVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="number"
                    android:hint="@string/setVolume"
                    android:layout_marginEnd="2dp"
                    android:text="50"/>
                <Button
                    android:id="@+id/settingVolume"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="8dp"
                    android:maxWidth="90dp"
                    android:text="@string/setting"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/setDefaultEqualizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/defaultEqualizerMode"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:background="@drawable/button_background"/>

                <Button
                    android:id="@+id/setFullEqualizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fullEqualizerMode"
                    android:maxWidth="90dp"
                    android:layout_marginEnd="2dp"
                    android:background="@drawable/button_background"/>

                <Button
                    android:id="@+id/setBrightEqualizer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brightEqualizerMode"
                    android:layout_marginEnd="4dp"
                    android:maxWidth="90dp"
                    android:background="@drawable/button_background"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="16sp"
                android:textColor="@color/textPrimaryColor"
                android:text="增强录音功能测试"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">
                <Button
                    android:id="@+id/initAudioGameLive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:text="@string/initAudioGameLive"/>
                <Button
                    android:id="@+id/isSupportAdvancedRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:text="是否支持录音"/>
                <Button
                    android:id="@+id/enableAdvancedRecord"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:text="@string/audioGameLiverequestVoice"/>
                <Button
                    android:id="@+id/disableAdvancedRecording"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:text="@string/audioGameLiveVoiceRecording"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp">
                <Button
                    android:id="@+id/startAdvancedRecordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:text="@string/rec_start" />
                <Button
                    android:id="@+id/stopAdvancedRecordBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:text="@string/rec_stop" />
                <Button
                    android:id="@+id/startPlayMicBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:text="@string/play_start_mic" />
                <Button
                    android:id="@+id/startPlaySubmixBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:text="@string/play_start_submix" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp">
                <Button
                    android:id="@+id/stopPlayBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:maxWidth="90dp"
                    android:text="@string/play_stop_all" />
                <Button
                    android:id="@+id/micRecordOnBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:text="@string/double_record" />
                <Button
                    android:id="@+id/micRecordOffBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:text="@string/double_record_off" />
                <Button
                    android:id="@+id/doubleRecordPlayBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_background"
                    android:layout_marginEnd="2dp"
                    android:visibility="gone"
                    android:text="@string/double_record_play" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorTextBackground">
            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:typeface="sans"
                android:textColor="@color/colorHint"
                android:textSize="16sp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
